# workos-rust

./: CHANGELOG.md  Cargo.toml  README.md  bors.toml
.github/workflows/: rustdoc.yml
.semaphore/: semaphore.yml
src/: admin_portal.rs  core.rs  directory_sync.rs  known_or_unknown.rs  lib.rs  mfa.rs  organizations.rs  passwordless.rs  sso.rs  user_management.rs  webhooks.rs  workos.rs
src/admin_portal/: operations.rs
src/admin_portal/operations/: generate_portal_link.rs
src/core/: error.rs  response.rs  types.rs
src/core/types/: api_key.rs  authorization_code.rs  client_id.rs  paginated_list.rs  pagination_options.rs  pagination_params.rs  raw_attributes.rs  timestamps.rs  url_encodable_vec.rs
src/directory_sync/: operations.rs  types.rs
src/directory_sync/operations/: delete_directory.rs  get_directory.rs  get_directory_group.rs  get_directory_user.rs  list_directories.rs  list_directory_groups.rs  list_directory_users.rs
src/directory_sync/types/: directory.rs  directory_group.rs  directory_type.rs  directory_user.rs
src/mfa/: operations.rs  types.rs
src/mfa/operations/: challenge_factor.rs  enroll_factor.rs  verify_challenge.rs  verify_factor.rs
src/mfa/types/: authentication_challenge.rs  authentication_factor.rs  mfa_code.rs
src/organizations/: operations.rs  types.rs
src/organizations/operations/: create_organization.rs  delete_organization.rs  get_organization.rs  list_organizations.rs  update_organization.rs
src/organizations/types/: organization.rs
src/passwordless/: operations.rs  types.rs
src/passwordless/operations/: create_passwordless_session.rs  send_passwordless_session.rs
src/passwordless/types/: passwordless_session.rs
src/sso/: get_profile_and_token.rs  operations.rs  types.rs
src/sso/operations/: delete_connection.rs  get_authorization_url.rs  get_connection.rs  get_profile.rs  get_profile_and_token.rs  list_connections.rs
src/sso/types/: access_token.rs  authorization_code.rs  client_id.rs  connection.rs  connection_type.rs  profile.rs
src/user_management/: operations.rs
src/user_management/operations/: authenticate_with_code.rs  get_user.rs
src/user_management/types/: user.rs
src/webhooks/: types.rs
src/webhooks/types/: directory.rs  events.rs  webhook.rs  webhook_event.rs
src/webhooks/types/events/: connection_activated.rs  connection_deactivated.rs  connection_deleted.rs  directory_activated.rs  directory_deactivated.rs  directory_deleted.rs  directory_group_created.rs  directory_group_deleted.rs  directory_group_updated.rs  directory_group_user_added.rs  directory_group_user_removed.rs  directory_user_created.rs  directory_user_deleted.rs  directory_user_updated.rs
