[package]
name = "workos"
version = "0.1.0"
description = "Official Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/workos/workos-rust"
documentation = "https://docs.rs/workos/"
authors = ["WorkOS"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
querystring = "1.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
matches = "0.1"
mockito = "0.31"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
