[package]
name = "workos"
version = "0.1.1"
description = "[Experimental] Official Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/workos/workos-rust"
documentation = "https://docs.rs/workos/"
authors = ["WorkOS"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "0.8", default-features = false, optional = true }
querystring = "1.1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
ring = { version = "0.16", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
matches = "0.1"
mockito = "0.31"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
