[package]
name = "workos"
version = "0.2.0"
description = "[Experimental] Official Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/workos/workos-rust"
documentation = "https://docs.rs/workos/"
authors = ["WorkOS"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", default-features = false, optional = true }
pem = { version = "3.0", default-features = false, optional = true }
querystring = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
ring = { version = "0.17", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
matches = "0.1"
mockito = "1.2"
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
